<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:custom="http://schemas.android.com/apk/res/ninja.dudley.yamr"
    >
    <PreferenceCategory
        android:key="reading_settings"
        android:title="@string/reading_settings"
        >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="rtl_enabled"
            android:summary="@string/rtl_enabled_sum"
            android:title="@string/rtl_enabled"
            />
        <ninja.dudley.yamr.ui.util.SeekBarPreference
            android:key="pre_fetch_buffer"
            android:summary="@string/pre_fetch_buffer_sum"
            android:title="@string/pre_fetch_buffer"
            custom:defaultValue="0"
            custom:min="0"
            custom:max="10"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="storage_settings"
        android:title="Storage"
        >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_external_storage"
            android:title="@string/use_external_storage"
            android:summary="@string/use_external_storage_sum"/>
    </PreferenceCategory>
</PreferenceScreen>